crates/reinhardt-pages/tests/ui/style/fail/ambiguous_selector.stderr
error: style syntax error: selector heads must contain exactly one simple selector; express relationships and refinements with nested rules
 --> tests/ui/style/fail/ambiguous_selector.rs:5:7
  |
5 |     .card.label {
  |          ^
